# meilisync-admin

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy.yml  deply.yml
cli/: license.py
meilisync_admin/: __init__.py  app.py  auth.py  constants.py  depends.py  health.py  license.py  log.py  meili.py  models.py  scheduler.py  settings.py  signals.py  validators.py
meilisync_admin/api/: __init__.py  action_log.py  admin.py  auth.py  init.py  license.py  meilisearch.py  source.py  stat.py  sync.py
meilisync_admin/libs/: redis.py
meilisync_admin/locales/: __init__.py  en-US.yml  zh-CN.yml
meilisync_admin/routers/: __init__.py  meilisearch.py  source.py  sync.py
migrations/models/: 0_20230228212346_init.py  0_20230302145034_init.py  1_20230302170140_update.py  2_20230303230533_update.py  3_20230306115039_update.py  4_20230309224223_update.py  5_20230508174203_update.py  6_20230518133021_update.py  7_20230619212542_update.py
